抽象工厂方法；

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 
     <modules>
         <module>jdk-logging</module>
-        <module>factory-pattern</module>
+        <module>factory</module>
+        <module>abstract-factory</module>
     </modules>
 
     <properties>
