--- a/abstract-factory/pom.xml
+++ b/abstract-factory/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.white</groupId>
         <artifactId>design-pattern</artifactId>
+        <groupId>com.github.white</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>factory-pattern</artifactId>
-    <version>${parent.version}</version>
+    <artifactId>abstract-factory</artifactId>
 
-    <name>factory-pattern</name>
+    <name>abstract-factory</name>
 
     <dependencies>
         <dependency>
