--- a/factory/pom.xml
+++ b/factory/pom.xml
@@ -2,15 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <artifactId>design-pattern</artifactId>
         <groupId>com.github.white</groupId>
+        <artifactId>design-pattern</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jdk-logging</artifactId>
+    <artifactId>factory-pattern</artifactId>
 
-    <name>jdk-logging</name>
+    <name>factory-pattern</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.white</groupId>
+            <artifactId>jdk-logging</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
