--- a/factory/pom.xml
+++ b/factory/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.white</groupId>
-        <artifactId>design-pattern</artifactId>
+        <artifactId>design-patterns</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>factory-pattern</artifactId>
+    <artifactId>factory</artifactId>
 
-    <name>factory-pattern</name>
+    <name>factory</name>
 
     <dependencies>
         <dependency>
