--- a/abstract-factory/pom.xml
+++ b/abstract-factory/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>jdk-logging</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
