--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.18</version>
             </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
