--- a/jdk-logging/pom.xml
+++ b/jdk-logging/pom.xml
@@ -4,13 +4,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>design-patterns</artifactId>
         <groupId>com.github.white</groupId>
+        <artifactId>design-patterns</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jdk-logging</artifactId>
-
     <name>jdk-logging</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
