--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 
     <modules>
         <module>jdk-logging</module>
-        <module>factory</module>
-        <module>abstract-factory</module>
-        <module>builder</module>
+        <module>creational</module>
+        <module>structural</module>
+        <module>behavioral</module>
     </modules>
 
     <properties>
