--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,11 @@ hs_err_pid*
 .idea
 *.iml
 
+# eclipse
+.settings
+.classpath
+.project
+# Java annotation processor (APT)
+.factorypath
+
 target/
