--- a/structural/proxy/pom.xml
+++ b/structural/proxy/pom.xml
@@ -17,6 +17,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.white</groupId>
+            <artifactId>jdk-logging</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
