设计模式的原则-单一职责原则

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>jdk-logging</module>
+        <module>principle</module>
         <module>creational</module>
         <module>structural</module>
         <module>behavioral</module>
