--- a/structural/bridge/pom.xml
+++ b/structural/bridge/pom.xml
@@ -14,6 +14,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.white</groupId>
+            <artifactId>jdk-logging</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
