--- a/behavioral/interpreter/pom.xml
+++ b/behavioral/interpreter/pom.xml
@@ -17,6 +17,16 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.white</groupId>
+            <artifactId>jdk-logging</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
