--- a/principle/pom.xml
+++ b/principle/pom.xml
@@ -17,5 +17,9 @@
             <groupId>com.github.white</groupId>
             <artifactId>jdk-logging</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 </project>
