feat: change log implementation with log4j2
Signed-off-by: white <294476387@qq.com>

--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -9,13 +9,21 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jdk-logging</artifactId>
-    <name>jdk-logging</name>
+    <artifactId>logging</artifactId>
+    <name>logging</name>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
