--- a/creational/abstract-factory/pom.xml
+++ b/creational/abstract-factory/pom.xml
@@ -14,12 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.white</groupId>
-            <artifactId>jdk-logging</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
