--- a/creational/pom.xml
+++ b/creational/pom.xml
@@ -23,4 +23,16 @@
         <module>singleton</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.white</groupId>
+            <artifactId>logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 </project>
