--- a/behavioral/command/pom.xml
+++ b/behavioral/command/pom.xml
@@ -14,12 +14,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.github.white</groupId>
-            <artifactId>jdk-logging</artifactId>
+            <artifactId>logging</artifactId>
         </dependency>
     </dependencies>
 
