--- a/behavioral/interpreter/pom.xml
+++ b/behavioral/interpreter/pom.xml
@@ -13,10 +13,7 @@
     <name>interpreter</name>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -25,7 +22,7 @@
 
         <dependency>
             <groupId>com.github.white</groupId>
-            <artifactId>jdk-logging</artifactId>
+            <artifactId>logging</artifactId>
         </dependency>
     </dependencies>
 
