--- a/structural/facade/pom.xml
+++ b/structural/facade/pom.xml
@@ -15,13 +15,10 @@
     <dependencies>
         <dependency>
             <groupId>com.github.white</groupId>
-            <artifactId>jdk-logging</artifactId>
+            <artifactId>logging</artifactId>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
+
     </dependencies>
 
 </project>
